feat: add preview function

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">QR Code Reader App</string>
+    <string name="title">결괏값: </string>
+    <string name="result">Test 데이터 입니다.</string>
+    <string name="back">돌아가기</string>
+
 </resources>
